--- a/app/src/main/res/layout/single_post_layout.xml
+++ b/app/src/main/res/layout/single_post_layout.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_height="732dp"
         app:cardBackgroundColor="@color/colorPrimaryLight"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
-        app:cardMaxElevation="20dp">
+        app:cardMaxElevation="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:id="@+id/post_image"
-            android:layout_width="410dp"
-            android:layout_height="610dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             app:srcCompat="@drawable/side_nav_bar" />
@@ -26,9 +27,6 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="right"
-            android:layout_marginTop="630dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
             android:baselineAlignBottom="false"
             app:srcCompat="@drawable/like_border" />
 
@@ -36,9 +34,6 @@
             android:id="@+id/creator_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="420dp"
-            android:layout_marginBottom="10dp"
             android:visibility="gone"
             app:srcCompat="@drawable/btn_bg" />
 
@@ -46,11 +41,12 @@
             android:id="@+id/creator_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="430dp"
             android:text="TextView"
-            android:visibility="gone" />
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:visibility="visible" />
 
     </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
